--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -24,6 +24,33 @@
         </div>
         <div class="col-md-3"></div>
       </div>
+      <div class="row">
+        <div class="col-md-12" id="mapid"></div>
+      </div>
     </div>
+
+    {% block stylesheets %}
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.css" rel="stylesheet">
+        <style>
+            #mapid { height: 400px; }
+        </style>
+    {% endblock %}
+    {% block javascript %}
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.js"></script>
+        <script>
+            var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+
+            L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+                maxZoom: 18,
+                attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+                    '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+                    'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+                id: 'mapbox.streets'
+            }).addTo(mymap);
+
+            L.marker([51.5, -0.09]).addTo(mymap)
+                .bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
+        </script>
+    {% endblock %}
 {% endblock %}
 
