--- a/app/Resources/views/weather.html.twig
+++ b/app/Resources/views/weather.html.twig
@@ -8,13 +8,55 @@
 
       <div class="row">
         <div class="col-md-2"></div>
-        <div class="col-md-8">
-            
+        <div class="col-md-4">
+            <div id="mapid"></div>
+        </div>
+        <div class="col-md-4">
+            <h2>Sydney</h4>
+            <h4>Snow, Hard Snow</h4>
+            <h3>24°C</h3>
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <td>Wind</td>
+                        <td>5m/s | 67°</td>
+                    </tr>
+                    <tr>
+                        <td>Pressure</td>
+                        <td>1010</td>
+                    </tr>
+                    <tr>
+                        <td>Humidity</td>
+                        <td>62</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
         <div class="col-md-2"></div>
       </div>
     </div>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.js"></script>
+    {% block stylesheets %}
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.css" rel="stylesheet">
+        <style>
+            #mapid { height: 400px; }
+        </style>
+    {% endblock %}
+    {% block javascript %}
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.js"></script>
+        <script>
+            var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+
+            L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+                maxZoom: 18,
+                attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+                    '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+                    'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+                id: 'mapbox.streets'
+            }).addTo(mymap);
+
+            L.marker([51.5, -0.09]).addTo(mymap)
+                .bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
+        </script>
+    {% endblock %}
 {% endblock %}
 
