add popular city to home

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,7 +18,7 @@
     </head>
     <body class="bg-light">
         {% block body %}{% endblock %}
-        <footer class="text-muted text-center text-small">
+        <footer class="py-5 text-muted text-center text-small">
             <p class="mb-1">&copy; City Weather</p>
         </footer>
         {% block javascripts %}{% endblock %}
