--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -24,6 +24,12 @@
                     </div>
                 </div>
             </form>
+            <a href="/weather?city=Sydney" class="btn btn-light">Sydney</a>
+            <a href="/weather?city=Melbourne" class="btn btn-light">Melbourne</a>
+            <a href="/weather?city=Brisbane" class="btn btn-light">Brisbane</a>
+            <a href="/weather?city=Adelaide" class="btn btn-light">Adelaide</a>
+            <a href="/weather?city=Perth" class="btn btn-light">Perth</a>
+            <a href="/weather?city=Cairns" class="btn btn-light">Cairns</a>
         </div>
         <div class="col-md-3"></div>
       </div>
