update wether list table

--- a/app/Resources/views/weather.html.twig
+++ b/app/Resources/views/weather.html.twig
@@ -71,7 +71,7 @@
                         <br/ >{{ city_weather.main.temp }}°C
                     </td>
                     <td>{{ weather.wind.speed }} m/s | {{ weather.wind.deg }}°</td>
-                    <td>{{ weather.main.pressure }} m/s</td>
+                    <td>{{ weather.main.pressure }} hpa</td>
                     <td>{{ weather.main.humidity }} %</td>
                 </tr>
             {% set num = num + 1 %}
