--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -24,12 +24,11 @@
                     </div>
                 </div>
             </form>
-            <a href="/weather?city=Sydney" class="btn btn-light">Sydney</a>
-            <a href="/weather?city=Melbourne" class="btn btn-light">Melbourne</a>
-            <a href="/weather?city=Brisbane" class="btn btn-light">Brisbane</a>
-            <a href="/weather?city=Adelaide" class="btn btn-light">Adelaide</a>
-            <a href="/weather?city=Perth" class="btn btn-light">Perth</a>
-            <a href="/weather?city=Cairns" class="btn btn-light">Cairns</a>
+            
+            {% for city in popular_city %}
+                <a href="/weather?city={{city.city}}" class="btn btn-light">{{city.city}}</a>
+            {% endfor %}
+            
         </div>
         <div class="col-md-3"></div>
       </div>
